Added core publishing.

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'kotlin'
 apply plugin: 'net.corda.plugins.quasar-utils'
 apply plugin: 'net.corda.plugins.publish-utils'
+apply plugin: 'com.jfrog.bintray'
 
 buildscript {
     repositories {
@@ -90,6 +91,26 @@ dependencies {
     compile "javax.ws.rs:javax.ws.rs-api:2.0"
 }
 
+bintray {
+    user = System.getenv('CORDA_BINTRAY_USER')
+    key = System.getenv('CORDA_BINTRAY_KEY')
+    publications = ['core']
+    dryRun = false
+    pkg {
+        repo = 'corda'
+        name = 'core'
+        userOrg = 'r3'
+        licenses = ['Apache-2.0']
+
+        version {
+            gpg {
+                sign = true
+                passphrase = System.getenv('CORDA_BINTRAY_GPG_PASSPHRASE')
+            }
+        }
+    }
+}
+
 publishing {
     publications {
         core(MavenPublication) {
@@ -98,6 +119,34 @@ publishing {
 
             artifact sourceJar
             artifact javadocJar
+
+            pom.withXml {
+                asNode().children().last() + {
+                    resolveStrategy = Closure.DELEGATE_FIRST
+                    name 'core'
+                    description 'Core core'
+                    url 'https://github.com/corda/corda'
+                    scm {
+                        url 'https://github.com/corda/corda'
+                    }
+
+                    licenses {
+                        license {
+                            name 'Apache-2.0'
+                            url 'https://www.apache.org/licenses/LICENSE-2.0'
+                            distribution 'repo'
+                        }
+                    }
+
+                    developers {
+                        developer {
+                            id 'R3'
+                            name 'R3'
+                            email 'dev@corda.net'
+                        }
+                    }
+                }
+            }
         }
     }
 }
