--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'kotlin'
 apply plugin: 'net.corda.plugins.quasar-utils'
 apply plugin: 'net.corda.plugins.publish-utils'
+apply plugin: 'maven-publish'
 apply plugin: 'com.jfrog.bintray'
 
 buildscript {
