--- a/test-utils/build.gradle
+++ b/test-utils/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'kotlin'
 apply plugin: 'net.corda.plugins.quasar-utils'
 apply plugin: 'net.corda.plugins.publish-utils'
+apply plugin: 'maven-publish'
+apply plugin: 'com.jfrog.bintray'
 
 repositories {
     mavenLocal()
@@ -49,6 +51,26 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.3.1'
 }
 
+bintray {
+    user = System.getenv('CORDA_BINTRAY_USER')
+    key = System.getenv('CORDA_BINTRAY_KEY')
+    publications = ['testutils']
+    dryRun = false
+    pkg {
+        repo = 'corda'
+        name = 'test-utils'
+        userOrg = 'r3'
+        licenses = ['Apache-2.0']
+
+        version {
+            gpg {
+                sign = true
+                passphrase = System.getenv('CORDA_BINTRAY_GPG_PASSPHRASE')
+            }
+        }
+    }
+}
+
 publishing {
     publications {
         testutils(MavenPublication) {
@@ -57,6 +79,34 @@ publishing {
 
             artifact sourceJar
             artifact javadocJar
+
+            pom.withXml {
+                asNode().children().last() + {
+                    resolveStrategy = Closure.DELEGATE_FIRST
+                    name 'test-utils'
+                    description 'Testing utilities for Corda'
+                    url 'https://github.com/corda/corda'
+                    scm {
+                        url 'https://github.com/corda/corda'
+                    }
+
+                    licenses {
+                        license {
+                            name 'Apache-2.0'
+                            url 'https://www.apache.org/licenses/LICENSE-2.0'
+                            distribution 'repo'
+                        }
+                    }
+
+                    developers {
+                        developer {
+                            id 'R3'
+                            name 'R3'
+                            email 'dev@corda.net'
+                        }
+                    }
+                }
+            }
         }
     }
 }
