--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,7 @@ include 'finance'
 include 'finance:isolated'
 include 'core'
 include 'node'
+include 'node:capsule'
 include 'client'
 include 'experimental'
 include 'experimental:sandbox'
