Publish utils no longer needs a configuration block per project, just one bintray configuration per project providing it fits certain criteria.

--- a/gradle-plugins/build.gradle
+++ b/gradle-plugins/build.gradle
@@ -36,6 +36,7 @@ bintrayConfig {
     licenses = ['Apache-2.0']
     gpgSign = true
     gpgPassphrase = System.getenv('CORDA_BINTRAY_GPG_PASSPHRASE')
+    publications = ['cordformation', 'quasar-utils']
 }
 
 // Aliasing the publishToMavenLocal for simplicity.
