Quasar utils now follows the format required by the new publishing utilities gradle plugin.

--- a/gradle-plugins/quasar-utils/build.gradle
+++ b/gradle-plugins/quasar-utils/build.gradle
@@ -13,7 +13,7 @@ repositories {
 
 publishing {
     publications {
-        quasarUtils(MavenPublication) {
+        "quasar-utils"(MavenPublication) {
             from components.java
             groupId  'net.corda.plugins'
             artifactId 'quasar-utils'
