All gradle plugins can now be published with the publishing plugin.

--- a/gradle-plugins/build.gradle
+++ b/gradle-plugins/build.gradle
@@ -21,7 +21,7 @@ apply plugin: 'net.corda.plugins.publish-utils'
 
 allprojects {
     version "$gradle_plugins_version"
-    group 'net.corda'
+    group 'net.corda.plugins'
 }
 
 subprojects {
